// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button tests > should render correct decrease button 1`] = `
<div>
  <button
    class="sc-bcXHqe hXcyCH"
  >
    I am button
  </button>
</div>
`;

exports[`Button tests > should render correct increase button 1`] = `
<div>
  <button
    class="sc-bcXHqe hVFLLR"
  >
    I am button
  </button>
</div>
`;

exports[`Button tests > should render correct reset button 1`] = `
<div>
  <button
    class="sc-bcXHqe gInzaI"
  >
    I am button
  </button>
</div>
`;
